force-app/main/default/objects/Account_Relationship__c/Account_Relationship__c.object-meta.xml
<CustomObject>
    <description>This is fed by the hris integration. This defines relationships between clients.</description>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>