force-app/main/default/objects/Account_Relationship__c/fields/Relationship_Key__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Key__c</fullName>
    <description>The value that identifies this relationship.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Key</label>
    <length>12</length>
    <type>Text</type>
</CustomField>