force-app/main/default/objects/Account_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>The type of relationship this is.</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premier Related Company</fullName>
            </value>
            <value>
                <fullName>HRO</fullName>
            </value>
            <value>
                <fullName>MMS Group</fullName>
            </value>
            <value>
                <fullName>MMS Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>